--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -92,30 +92,37 @@ regparams.EMPTY_TILE_THRESHOLD = .95;
 % disparities (ie <20%)
 params.SCALE_PYRAMID = [5];
 
-%# of Jobs in normalization
-params.NORM_MAX_RUN_JOBS = 20;
-params.NORM_EACH_JOB_POOL_SIZE = 0;
-params.PUNCTA_MAX_RUN_JOBS = 1;
-params.tempDir = '/mp/nas1/share/tmp-test';
+%temp dir in normalization
+params.tempDir = 'tmp';
 
 %batch_processing parameters
 params.WAIT_SEC = 10;
-params.REG_POOL_SIZE = 2;
-params.PUNCTA_POOL_SIZE = 4;
-params.MAX_RUN_JOBS = 30;
 
-params.REG_DESC_MAX_RUN_JOBS = 8;
-params.REG_DESC_MAX_THREADS = 10;
-params.REG_DESC_MAX_POOL_SIZE = 10;
+params.NORM_MAX_RUN_JOBS = 20;
+params.NORM_MAX_POOL_SIZE = 0;
+
+params.CALC_DESC_MAX_RUN_JOBS = 30;
+params.CALC_DESC_MAX_POOL_SIZE = 2;
+
+params.REG_CORR_MAX_RUN_JOBS = 8;
+params.REG_CORR_MAX_POOL_SIZE = 5;
+params.REG_CORR_MAX_THREADS = 10;
 
 params.AFFINE_MAX_RUN_JOBS = 8;
-params.AFFINE_MAX_THREADS = 10;
 params.AFFINE_MAX_POOL_SIZE = 5;
+params.AFFINE_MAX_THREADS = 10;
 
 params.TPS3DWARP_MAX_RUN_JOBS = 4;
-params.TPS3DWARP_MAX_THREADS = 10;
 params.TPS3DWARP_MAX_POOL_SIZE = 10;
+params.TPS3DWARP_MAX_THREADS = 10;
 
 params.APPLY3DTPS_MAX_RUN_JOBS = 2;
-params.APPLY3DTPS_MAX_THREADS = 10;
 params.APPLY3DTPS_MAX_POOL_SIZE = 10;
+params.APPLY3DTPS_MAX_THREADS = 10;
+
+params.PUNCTA_MAX_RUN_JOBS = 1;
+params.PUNCTA_MAX_POOL_SIZE = 4;
+
+%cluster environment
+params.NUM_LOGICAL_CORES = 40;
+
