--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -44,8 +44,8 @@ params.DOWNSAMPLE_RATE = 2.;
 %intermediate image format
 params.IMAGE_EXT = 'tif';
 
-%Use intermediate tmp files in normalization
-params.USE_TMP_FILES_IN_NORM = true;
+%Use intermediate tmp files in color-correction and normalization
+params.USE_TMP_FILES = true;
 
 % Define parameters for registration, titled regparams for clarity
 regparams.REGISTRATION_TYPE = 'affine';%'registered'; %or 'affine'
@@ -100,6 +100,10 @@ params.tempDir = 'tmp';
 
 %batch_processing parameters
 params.WAIT_SEC = 10;
+
+params.COLOR_CORRECTION_MAX_RUN_JOBS = 2;
+params.COLOR_CORRECTION_MAX_POOL_SIZE = 0;
+params.COLOR_CORRECTION_MAX_THREADS = 10;
 
 params.NORM_MAX_RUN_JOBS = 20;
 params.NORM_MAX_POOL_SIZE = 0;
