--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -101,6 +101,8 @@ params.tempDir = 'tmp';
 %batch_processing parameters
 params.WAIT_SEC = 10;
 
+params.DOWN_SAMPLING_MAX_POOL_SIZE = 10;
+
 params.COLOR_CORRECTION_MAX_RUN_JOBS = 2;
 params.COLOR_CORRECTION_MAX_POOL_SIZE = 0;
 params.COLOR_CORRECTION_MAX_THREADS = 10;
