--- a/mex/convn_cuda/Makefile
+++ b/mex/convn_cuda/Makefile
@@ -22,20 +22,14 @@ all: $(TARGET)
 convn_cuda.mexa64: convn_cuda.o $(CUFFT_DIR)/libcufftutils.a
 	mex -compatibleArrayDims -outdir ../ -output $@ $^ $(CUFFT_DIR)/libcufftutils.a -lmwgpu -L$(CUDA_LIB) -I$(CUDA_INC) -lcufft -lcudart
 
-convn_1GPU_cuda.mexa64: convn_1GPU_cuda.o $(CUFFT_DIR)/libcufftutils.a
-	mex -compatibleArrayDims -outdir ../ -output $@ $^ $(CUFFT_DIR)/libcufftutils.a -lmwgpu -L$(CUDA_LIB) -I$(CUDA_INC) -lcufft -lcudart
-
-fft3_cuda.mexa64: fft3_cuda.o $(CUFFT_DIR)/libcufftutils.a
-	mex -compatibleArrayDims -outdir ../ -output $@ $^ $(CUFFT_DIR)/libcufftutils.a -lmwgpu -L$(CUDA_LIB) -I$(CUDA_INC) -lcufft -lcudart
-
-fft3_cuda.o: fft3_cuda.cpp
-	mex -compatibleArrayDims -c $^ -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUFFT_DIR)
+#convn_1GPU_cuda.mexa64: convn_1GPU_cuda.o $(CUFFT_DIR)/libcufftutils.a
+	#mex -compatibleArrayDims -outdir ../ -output $@ $^ $(CUFFT_DIR)/libcufftutils.a -lmwgpu -L$(CUDA_LIB) -I$(CUDA_INC) -lcufft -lcudart
 
 convn_cuda.o: convn_cuda.cpp
 	mex -compatibleArrayDims -c $^ -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUFFT_DIR)
 
-convn_1GPU_cuda.o: convn_1GPU_cuda.cpp
-	mex -compatibleArrayDims -c $^ -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUFFT_DIR)
+#convn_1GPU_cuda.o: convn_1GPU_cuda.cpp
+	#mex -compatibleArrayDims -c $^ -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUFFT_DIR)
 
 cmd_convn_cuda.o: cmd_convn_cuda.cu
 	#nvcc $(NVCCFLAGS) $(CPPFLAGS) -Xcompiler -fPIC -O2 -c -o $@ $<
@@ -58,13 +52,6 @@ lib-utils:
 # convn_cuda.mexa64: $(OBJS) $(CUDNN_DIR)/libcudnnutils.a
 #	mex -compatibleArrayDims -outdir ../ -output $@ $(OBJS) $(CUDNN_DIR)/libcudnnutils.a -lmwgpu -L$(CUDA_LIB) -lcudart -lcudnn #-ltbb 
 
-#convn_arrayfire_cuda.mexa64: convn_arrayfire_cuda.cpp
-	#mex -compatibleArrayDims -outdir ../ -output $@ $^ -I$(CUDA_INC) -I/usr/local/include -L$(CUDA_LIB) -lcudart -L/usr/local/lib -lafcuda
-	#mex -compatibleArrayDims -outdir ../ -output $@ $^ -I$(CUDA_INC) -I/usr/local/include -L$(CUDA_LIB) -lcudart -L/usr/local/lib -laf -lafcuda
-
-#convn_arrayfire.mexa64: convn_arrayfire.cpp
-	#mex -g -compatibleArrayDims -outdir ../ -output $@ $^ -I/usr/local/include -L/usr/local/lib -lafcpu
-
 #lib-cuda-utils:
 #	make -C cuda-utils
 
@@ -81,8 +68,6 @@ clean:
 	@make -C utils clean
 	@make -C cufft-utils clean
 	#-rm ../convn_1GPU_cuda.mexa64
-	#-rm ../fft3_cuda.mexa64
-	#-rm ../convn_arrayfire.mexa64
 	#@make -C cuda-utils clean
 	#@make -C cudnn-utils clean
 
