Commit: Commiting Dan's changes on to fixstars-dev

--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -28,6 +28,8 @@ params.BEAD_ZSTART = 50; %goes to :end
 params.COLOR_OFFSETS3D = [20,20,20];
 
 
+params.PUNCTA_SIZE_THRESHOLD = 30;
+params.PUNCTA_SIZE_MAX = 2000;
 params.PUNCTA_SIZE = 10; %Defines the cubic region around each puncta
 params.CHAN_STRS = {'ch00','ch01SHIFT','ch02SHIFT','ch03SHIFT'};
 
