--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -9,6 +9,7 @@ params.registeredImagesDir = '/home/kajita/works/ExSeqProcessing-merge/4_registr
 params.punctaSubvolumeDir = '/home/kajita/works/ExSeqProcessing-merge/5_puncta-extraction';
 params.basecallingResultsDir = '/home/kajita/works/ExSeqProcessing-merge/6_base-calling';
 params.reportingDir = '/home/kajita/works/ExSeqProcessing-merge/logs/imgs';
+params.logDir = 'logs';
 
 %Microscope parameters
 params.XRES = .17;
@@ -43,6 +44,9 @@ params.THRESHOLD_EXPRESSION = 15; %If a transcript shows up fewer than this it's
 params.DO_DOWNSAMPLE = true;
 params.DOWNSAMPLE_RATE = 2.;
 
+%use GPU CUDA or CPU
+params.USE_GPU_CUDA = false;
+
 %intermediate image format
 params.IMAGE_EXT = 'tif';
 
@@ -66,8 +70,8 @@ regparams.REGISTERCHANNELS_SC = {'summedNorm'};%'ch00','ch01SHIFT','ch02SHIFT','
 %Which channels do we warp?
 regparams.CHANNELS = {'summedNorm','ch00','ch01SHIFT','ch02SHIFT','ch03SHIFT'}; 
 
-regparams.INPUTDIR = '/home/kajita/works/ExSeqProcessing-merge/3_normalization';
-regparams.OUTPUTDIR = '/home/kajita/works/ExSeqProcessing-merge/4_registration';
+%regparams.INPUTDIR = '/home/kajita/works/ExSeqProcessing-merge/3_normalization';
+%regparams.OUTPUTDIR = '/home/kajita/works/ExSeqProcessing-merge/4_registration';
 
 regparams.OVERLAP = .1; %used to be 10%
 
@@ -130,9 +134,6 @@ params.TPS3DWARP_MAX_THREADS = 10;
 params.APPLY3DTPS_MAX_RUN_JOBS = 2;
 params.APPLY3DTPS_MAX_POOL_SIZE = 10;
 params.APPLY3DTPS_MAX_THREADS = 10;
-
-params.PUNCTA_MAX_RUN_JOBS = 1;
-params.PUNCTA_MAX_POOL_SIZE = 4;
 
 %cluster environment
 params.NUM_LOGICAL_CORES = 40;
