changed a way to exclusively locks between processes and threads: semaphore -> flock

--- a/mex/Makefile
+++ b/mex/Makefile
@@ -8,7 +8,7 @@ OBJS := $(SOURCES:.cpp=.o)
 all: $(TARGET)
 
 .cpp.mexa64: $(SOURCES)
-	mex $< -I./include
+	mex $< -outdir bin -output $@ -I./include
 
 clean:
 	-rm $(TARGET)
