--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -126,6 +126,8 @@ params.TPS3DWARP_MAX_RUN_JOBS = 4;
 params.TPS3DWARP_MAX_POOL_SIZE = 10;
 params.TPS3DWARP_MAX_THREADS = 10;
 
+params.PUNCTA_MAX_POOL_SIZE = 1;
+
 %cluster environment
 params.NUM_LOGICAL_CORES = 40;
 
