introduced auto decision ways of concurrency size in multi jobs and workers

--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -102,28 +102,31 @@ params.SCALE_PYRAMID = [5];
 %batch_processing parameters
 params.WAIT_SEC = 10;
 
-params.DOWN_SAMPLING_MAX_POOL_SIZE = 10;
+params.USABLE_MEM_RATE = 0.9;
+params.MATLAB_PROC_CONTEXT = 800; %MiB
 
-params.COLOR_CORRECTION_MAX_RUN_JOBS = 2;
-params.COLOR_CORRECTION_MAX_POOL_SIZE = 0;
+%params.DOWN_SAMPLING_MAX_POOL_SIZE = 10;
+%
+%params.COLOR_CORRECTION_MAX_RUN_JOBS = 2;
 params.COLOR_CORRECTION_MAX_THREADS = 10;
-
-params.NORM_MAX_RUN_JOBS = 20;
-params.NORM_MAX_POOL_SIZE = 0;
-
-params.CALC_DESC_MAX_RUN_JOBS = 30;
-params.CALC_DESC_MAX_POOL_SIZE = 2;
-
-params.REG_CORR_MAX_RUN_JOBS = 8;
-params.REG_CORR_MAX_POOL_SIZE = 5;
+%
+%params.NORM_MAX_RUN_JOBS = 20;
+%params.NORM_DOWNSAMPLE_MAX_RUN_JOBS = 20;
+%
+%params.CALC_DESC_MAX_RUN_JOBS = 30;
+%
+%params.CALC_CORR_MAX_RUN_JOBS = 1;
+params.CALC_CORR_MAX_THREADS = 10;
+%
+%params.REG_CORR_MAX_RUN_JOBS = 8;
 params.REG_CORR_MAX_THREADS = 10;
-
-params.AFFINE_MAX_RUN_JOBS = 8;
-params.AFFINE_MAX_POOL_SIZE = 5;
+%
+%params.AFFINE_MAX_RUN_JOBS = 8;
+%params.AFFINE_MAX_POOL_SIZE = 5;
 params.AFFINE_MAX_THREADS = 10;
-
-params.TPS3DWARP_MAX_RUN_JOBS = 4;
-params.TPS3DWARP_MAX_POOL_SIZE = 10;
+%
+%params.TPS3DWARP_MAX_RUN_JOBS = 4;
+%params.TPS3DWARP_MAX_POOL_SIZE = 10;
 params.TPS3DWARP_MAX_THREADS = 10;
 
 params.PUNCTA_MAX_POOL_SIZE = 1;
