usability improvements: - improved automatic decision of concurrency sizes - added multithreads control in jobs - removed unused image loads because of tiling code removal - added code to measure memory usage of MATLAB native functions and user functions

--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -139,6 +139,7 @@ params.COLOR_CORRECTION_MAX_THREADS = 10;
 %params.NORM_DOWNSAMPLE_MAX_RUN_JOBS = 20;
 %
 %params.CALC_DESC_MAX_RUN_JOBS = 30;
+params.CALC_DESC_MAX_THREADS = 4;
 %
 %params.CALC_CORR_MAX_RUN_JOBS = 1;
 params.CALC_CORR_MAX_THREADS = 10;
