--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -1,3 +1,4 @@
+params.INPUT_FILE_PATH = '/mp/nas1/share/ExSEQ/AutoSeq2/test-data/xy01/1_deconvolution';
 
 params.FILE_BASENAME = 'exseqauto-xy01';
 
