--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -45,6 +45,9 @@ params.THRESHOLD_EXPRESSION = 15; %If a transcript shows up fewer than this it's
 params.DO_DOWNSAMPLE = true;
 params.DOWNSAMPLE_RATE = 2.;
 
+%For puncta extraction:
+params.MAXNUM_MISSINGROUND=1;
+
 %use GPU CUDA or CPU
 params.USE_GPU_CUDA = false;
 
