--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -1,6 +1,6 @@
-params.INPUT_FILE_PATH = '/mp/nas1/share/ExSEQ/AutoSeq2/test-data/xy01/1_deconvolution';
+params.INPUT_FILE_PATH = '/mp/nas0/ExSeq/Experiments_July2019/CA1-20190714/F077/0_raw';
 
-params.FILE_BASENAME = 'exseqauto-xy01';
+params.FILE_BASENAME = 'exseqca1rep1-F077';
 
 % Data loading a storage parameteres
 params.deconvolutionImagesDir = '/mp/nas1/fixstars/kajita/ExSeqProcessing-merge/1_deconvolution';
@@ -19,9 +19,9 @@ params.ZRES = .4;
 
 
 %Experimental parameters
-params.REFERENCE_ROUND_WARP = 5;
-params.REFERENCE_ROUND_PUNCTA = 5;
-params.NUM_ROUNDS = 20;
+params.REFERENCE_ROUND_WARP = 1;
+params.REFERENCE_ROUND_PUNCTA = 1;
+params.NUM_ROUNDS = 5;
 params.NUM_CHANNELS = 4;
 
 params.MORPHOLOGY_ROUND = 5;
@@ -29,7 +29,7 @@ params.MORPHOLOGY_CHAN_STR = 'ch05';
 
 %Used for color correction
 %Assuming beads are at the top of the stack, when do they start?
-params.BEAD_ZSTART = 50; %goes to :end
+params.BEAD_ZSTART = 1; %goes to :end
 params.COLOR_OFFSETS3D = [20,20,20];
 
 
